# gmail-reader

./: .gitignore  README.md  Rules.md  pyproject.toml  rules.json
.github/: CODEOWNERS
email_reader/: loader.py  manager.py
email_reader/database/: engine.py
email_reader/database/tables/: __init__.py  email.py
email_reader/logics/: filters.py
email_reader/services/: gauth.py  gmail.py
tests/: conftest.py  test_01_rules.py
tests/static/: rules.json  test_emails.csv
tests/static/invalid/: rules-invalid-action.json  rules-invalid-predicate.json  rules-invalid-schema.json
tests/utils/: generate_fake_emails_and_rules.py  paths.py
